[tool.poetry]
name = "dataqa-extractor"
version = "0.1.1"
description = "No-code data extractor"
authors = ["Maria <maria@dataqa.ai>", "Stuart <stuart@dataqa.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0" # needed for streamlit
pandas = "2.1.3"
pydantic = "2.4.2"
openai = "0.28.0" # https://stackoverflow.com/questions/77540822)
instructor = "0.2.11" # last version to depend on openai < 1.0.0
streamlit = "1.29.0"

[tool.poetry.scripts]
dataqa-extract = "dataqa_extractor.run:run_app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
